fix: social links margin fix on small screen devices

--- a/src/styles/components/bioSection.scss
+++ b/src/styles/components/bioSection.scss
@@ -379,6 +379,14 @@
     flex-direction: row;
     align-items: center;
   }
+  .linksAreaBio {
+    display: flex;
+    padding-top: 8vw;
+    padding-bottom: 34px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
   .linkItem {
     padding: 2.8vw 8vw;
     font-size: 3.2vw;
